@@ -8,6 +8,17 @@ GNU grep NEWS                                    -*- outline -*-
   /proc file system and standard output is /dev/null.
   [bug introduced in grep-2.27]
 
+** Bug fixes
+
+  Fix performance regression with multiple patterns, e.g., for -Fi in
+  a multi-byte locale, or for -Fw in a single-byte locale.
+  [bugs introduced in grep-2.19, grep-2.22 and grep-2.26]
+
+** Improvements
+
+  Improve performance for -E or -G pattern lists that are easily
+  converted to -F format.
+
 
 * Noteworthy changes in release 2.27 (2016-12-06) [stable]
 
